--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 *.iml
-*.idea/
-*.settings
-*target
-*.classpath
-*.project
-*.gradle/
-build/
-out/
-test/
+.idea
+.settings
+target
+.classpath
+.project
+.gradle
+/build
+/out
+/test
